--- a/tool-1/Text to Binary  Binary to Text Converter 27/index.html
+++ b/tool-1/Text to Binary  Binary to Text Converter 27/index.html
@@ -443,7 +443,7 @@ function _0x18a3() {
         'trim',
         '3881241uyhtxv',
         'addEventListener',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'localhost',
         'hex',
         'select',
@@ -471,7 +471,7 @@ function _0x18a3() {
         'swapBtn',
         'octal',
         'binary',
-        'www.onlinegamesb.xyz'
+        'www.onlinegamesbd.xyz'
     ];
     _0x18a3 = function () {
         return _0x162c10;
