--- a/tool-1/Text to Emoji Art generator 41/index.html
+++ b/tool-1/Text to Emoji Art generator 41/index.html
@@ -617,9 +617,9 @@ function toggleTheme() {
     document['documentElement']['classList'][_0x43be94(0x14b)]('dark') ? (document[_0x43be94(0x163)]['classList'][_0x43be94(0x17c)]('dark'), localStorage[_0x43be94(0x18a)] = _0x43be94(0x180), themeIconLight[_0x43be94(0x165)]['remove'](_0x43be94(0x17a)), themeIconDark['classList'][_0x43be94(0x18d)]('hidden')) : (document[_0x43be94(0x163)]['classList'][_0x43be94(0x18d)](_0x43be94(0x140)), localStorage[_0x43be94(0x18a)] = _0x43be94(0x140), themeIconLight[_0x43be94(0x165)][_0x43be94(0x18d)](_0x43be94(0x17a)), themeIconDark['classList'][_0x43be94(0x17c)]('hidden'));
 }
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0xb60947(0x164),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0xb60947(0x18b)][_0xb60947(0x1b8)];
 if (!allowedDomains['includes'](currentHost)) {
     document[_0xb60947(0x191)][_0xb60947(0x18f)] = _0xb60947(0x169);
