--- a/tool-1/text Comparison 13/index.html
+++ b/tool-1/text Comparison 13/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Compare two texts or documents instantly with our free Text Comparison tool. Works online and offline to help you find differences, similarities, and changes between any two texts easily.">
 <meta name="keywords" content="text comparison, text compare, compare text online, compare documents, diff checker, text difference tool, text comparer, online text comparison, offline text comparison, find text differences">
-<meta name="author" content="OnlineGamesB">
-<title>Text Comparison - Compare Two Texts Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Text Comparison - Compare Two Texts Online & Offline | OnlineGamesBD</title>
 <link rel="stylesheet" href="/menu/footer.css">
     <style>
         :root {
@@ -326,7 +326,7 @@ function _0x29aa() {
         'textContent',
         'current-year',
         'clear-modified',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'original-text',
         'body',
         'added',
@@ -480,7 +480,7 @@ function _0x29aa() {
 const allowedDomains = [
         _0xbe262a(0x1c3),
         'localhost',
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0xbe262a(0x1d3)]['hostname'];
 function _0x5247(_0x4ce2bd, _0x176a61) {
     const _0x29aa8b = _0x29aa();
