--- a/tool-1/random food picker 49/index.html
+++ b/tool-1/random food picker 49/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Can’t decide what to eat? Use our free Random Food Picker to get delicious meal ideas instantly! Works online and offline for fun food choices and quick decisions.">
 <meta name="keywords" content="random food picker, food chooser, meal generator, what to eat, food randomizer, random meal idea, lunch picker, dinner picker, food spinner, offline food picker">
-<meta name="author" content="OnlineGamesB">
-<title>Random Food Picker - Decide What to Eat Instantly | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Random Food Picker - Decide What to Eat Instantly | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Reset and base styles */
@@ -471,9 +471,9 @@ function _0x2309(_0x153f63, _0x2a1eb6) {
     }, _0x2309(_0x153f63, _0x2a1eb6);
 }
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'localhost',
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x52b27d(0x146)][_0x52b27d(0x14d)];
 function _0x5516() {
     const _0x513b52 = [
