--- a/tool-1/privacy policy generator 23/index.html
+++ b/tool-1/privacy policy generator 23/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Create a professional Privacy Policy for your website or app instantly with our free Privacy Policy Generator tool. Works online and offline to help you generate GDPR, CCPA, and custom privacy policies in seconds.">
 <meta name="keywords" content="privacy policy generator, privacy policy maker, free privacy policy, website privacy policy, app privacy policy, gdpr privacy policy, ccpa privacy policy, online privacy policy generator, offline privacy policy generator, policy creator">
-<meta name="author" content="OnlineGamesB">
-<title>Privacy Policy Generator - Create Free Privacy Policies Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Privacy Policy Generator - Create Free Privacy Policies Online & Offline | OnlineGamesBD</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -548,8 +548,8 @@
         </div>
     </footer>
     <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     
     <div class="notification" id="notification">
@@ -629,7 +629,7 @@ function _0x45e6() {
         'hostname',
         '925953TMjtpx',
         '</p>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<p>If\x20you\x20would\x20like\x20to\x20exercise\x20any\x20of\x20these\x20rights,\x20please\x20contact\x20us\x20at\x20',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'input[name=\x22cookies\x22]:checked',
         'includes',
         'dataSharing',
@@ -773,7 +773,7 @@ generateBtn[_0x510bd3(0x161)](_0x510bd3(0x165), () => {
 const allowedDomains = [
         _0x510bd3(0x19d),
         _0x510bd3(0x160),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x510bd3(0x155)][_0x510bd3(0x19a)];
 if (!allowedDomains[_0x510bd3(0x19f)](currentHost)) {
     document[_0x510bd3(0x194)]['innerHTML'] = _0x510bd3(0x153);
