--- a/tool-1/percentage calculator 25/index.html
+++ b/tool-1/percentage calculator 25/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Easily calculate percentages with our free Percentage Calculator. Find percentage increase, decrease, or what percent of a number quickly and accurately online.">
 <meta name="keywords" content="percentage calculator, percent increase, percent decrease, what percent, percent finder, online percentage tool, percent formula, discount calculator, percent of number, percentage converter">
-<meta name="author" content="OnlineGamesB">
-<title>Percentage Calculator - Find Percent Increase, Decrease & More | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Percentage Calculator - Find Percent Increase, Decrease & More | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -261,8 +261,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -323,7 +323,7 @@ function _0x1160() {
         '4182012LhIasL',
         '528pRNdnK',
         'result2',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'value',
         'localhost',
         '4387962ICNFPz',
@@ -342,7 +342,7 @@ function _0x1160() {
         'whole',
         'Please\x20enter\x20valid\x20numbers',
         'decrease',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         '10gmFRWK',
         '870612xTUIEc',
         '5JxWNlu',
