--- a/tool-1/meta tag generator 22/index.html
+++ b/tool-1/meta tag generator 22/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate SEO-friendly meta tags instantly with our free Meta Tag Generator tool. Works online and offline to help you create title, description, and keyword tags for better website ranking.">
 <meta name="keywords" content="meta tag generator, seo meta tags, meta description generator, meta title generator, keyword generator, online meta tag generator, offline meta tag generator, website seo tool, html meta tags, seo optimization">
-<meta name="author" content="OnlineGamesB">
-<title>Meta Tag Generator - Create SEO Meta Tags Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Meta Tag Generator - Create SEO Meta Tags Online & Offline | OnlineGamesBD</title>
 <link rel="stylesheet" href="/menu/footer.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -362,8 +362,8 @@
             </div>
         </footer>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -444,7 +444,7 @@ function _0x2e95() {
         'innerHTML',
         'forEach',
         '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'canonical',
         'checked',
         'clear-btn',
@@ -668,7 +668,7 @@ function _0x16d4(_0x3e841b, _0x5c0727) {
     });
 }));
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0x5cf601(0x113),
         _0x5cf601(0x10a)
     ], currentHost = window['location'][_0x5cf601(0x163)];
