--- a/tool-1/love calculator 20/index.html
+++ b/tool-1/love calculator 20/index.html
@@ -384,8 +384,8 @@
             <p>This tool is for entertainment purposes only. Real love is about more than just percentages!</p>
         </footer>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -404,7 +404,7 @@ function _0x364f() {
         'Needs\x20More\x20Work!',
         'length',
         'addEventListener',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'click',
         'Congratulations\x20',
         'value',
@@ -419,7 +419,7 @@ function _0x364f() {
         'display',
         '2821912mIQDjp',
         ',\x20you\x20have\x20good\x20potential!\x20Relationships\x20take\x20work\x20-\x20focus\x20on\x20communication\x20and\x20shared\x20experiences\x20to\x20grow\x20your\x20connection.',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'Every\x20relationship\x20has\x20potential!\x20',
         'location',
         '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>',
