--- a/tool-1/internet speed test 21/index.html
+++ b/tool-1/internet speed test 21/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Check your internet speed instantly with our free Internet Speed Test tool. Works online and offline to measure your download, upload, and ping speed accurately in seconds.">
 <meta name="keywords" content="internet speed test, speed test, online speed test, offline speed test, wifi speed test, broadband speed test, network speed test, test download speed, test upload speed, check internet speed">
-<meta name="author" content="OnlineGamesB">
-<title>Internet Speed Test - Check Download & Upload Speed | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Internet Speed Test - Check Download & Upload Speed | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -342,8 +342,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -455,7 +455,7 @@ function _0x4b43() {
     const _0x3392f7 = [
         'random',
         '2NrzNAy',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'toFixed',
         'toggle',
         'addEventListener',
@@ -474,7 +474,7 @@ function _0x4b43() {
         'average',
         '35896UCENyq',
         '5777724NnluMy',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'Testing\x20upload\x20speed...',
         'slow',
         'Test\x20completed!',
