--- a/offline-games/dragon-wing/index.html
+++ b/offline-games/dragon-wing/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragon Wing - Flying Dragon Adventure Game Online | OnlineGamesB</title>
-<meta name="description" content="Fly through obstacles with Dragon Wing! Control a dragon through challenging paths. Endless flying adventure. Play free on OnlineGamesB.xyz">
+    <title>Dragon Wing - Flying Dragon Adventure Game Online | OnlineGamesBD</title>
+<meta name="description" content="Fly through obstacles with Dragon Wing! Control a dragon through challenging paths. Endless flying adventure. Play free on OnlineGamesBD.xyz">
 <meta name="keywords" content="dragon game, flying games, adventure games, dragon wing, endless runner, arcade games">
     <link href="assets/style.css" rel="stylesheet" />
     <link rel="icon" href="assets/favicon.png" type="image/x-icon"/>
