--- a/tool-1/countdown timer 18/index.html
+++ b/tool-1/countdown timer 18/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Set countdowns easily with our free Countdown Timer tool. Works online and offline to help you track time for events, study sessions, workouts, and meetings with precision.">
 <meta name="keywords" content="countdown timer, online countdown, offline countdown, timer tool, event timer, study timer, workout timer, meeting countdown, digital timer, countdown clock">
-<meta name="author" content="OnlineGamesB">
-<title>Countdown Timer - Set Time Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Countdown Timer - Set Time Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -296,8 +296,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -384,9 +384,9 @@ function _0x203f() {
         'getElementById',
         'minutes-input',
         'play',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'catch',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'Audio\x20play\x20failed:',
         '<i\x20class=\x22fas\x20fa-play\x22></i>\x20Resume',
         'change',
