--- a/tool-1/Zalgo Sarcasm Text Generator 45/index.html
+++ b/tool-1/Zalgo Sarcasm Text Generator 45/index.html
@@ -478,8 +478,8 @@
         </div>
 
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
         <div id="copy-feedback" class="copy-feedback">Copied to clipboard!</div>
     </div>
@@ -928,7 +928,7 @@ function _0x1e05() {
         'down-intensity',
         'classList',
         'down-value',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'length',
         'map',
         'clipboard',
@@ -1049,7 +1049,7 @@ zalgoInput[_0x344d90(0x9d)](_0x344d90(0xc2), () => {
 const allowedDomains = [
         _0x344d90(0x8e),
         _0x344d90(0x84),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x344d90(0xb7)][_0x344d90(0xa4)];
 if (!allowedDomains[_0x344d90(0x87)](currentHost)) {
     document[_0x344d90(0xc0)][_0x344d90(0xaf)] = _0x344d90(0xb9);
