--- a/tool-1/color picker 15/index.html
+++ b/tool-1/color picker 15/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pick any color instantly with our free Color Picker tool. Works online and offline to help designers, developers, and artists choose, copy, and save colors with HEX, RGB, and HSL codes.">
 <meta name="keywords" content="color picker, color selector, online color picker, offline color picker, hex color picker, rgb color picker, hsl color picker, color code generator, color tool, web design color picker">
-<meta name="author" content="OnlineGamesB">
-<title>Color Picker - Choose & Copy Colors Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Color Picker - Choose & Copy Colors Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -558,8 +558,8 @@
         </div>
         
        <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
     
@@ -636,7 +636,7 @@ function _0x5c9a() {
         'createElement',
         'show',
         'Orange',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'clipboard',
         'add',
         'cmyk(',
@@ -1061,7 +1061,7 @@ window[_0x7404a0(0xbf)](_0x7404a0(0xb6), init);
 const allowedDomains = [
         _0x7404a0(0x107),
         _0x7404a0(0xd0),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x7404a0(0xb9)]['hostname'];
 function _0x4690(_0x2e0779, _0x246b0a) {
     const _0x5c9aeb = _0x5c9a();
