--- a/tool-1/bmi calculator 9/index.html
+++ b/tool-1/bmi calculator 9/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Calculate your Body Mass Index (BMI) instantly with our free BMI Calculator tool. Works online and offline to help you check if your weight is healthy for your height. Simple, accurate, and fast.">
 <meta name="keywords" content="bmi calculator, body mass index, calculate bmi, bmi chart, healthy weight calculator, online bmi calculator, offline bmi calculator, fitness tool, body weight checker, bmi for men and women">
-<meta name="author" content="OnlineGamesB">
-<title>BMI Calculator - Check Your Body Mass Index Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>BMI Calculator - Check Your Body Mass Index Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -453,8 +453,8 @@
             <p>BMI Categories: Underweight (&lt;18.5), Normal weight (18.5-24.9), Overweight (25-29.9), Obesity (30+)</p>
         </div>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -587,7 +587,7 @@ function _0x5d8a() {
         'Ensure\x20adequate\x20iron\x20intake,\x20especially\x20if\x20you\x20have\x20heavy\x20menstrual\x20periods',
         'metric',
         'Obese',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         '.bmi-indicator',
         'Based\x20on\x20your\x20BMI\x20category\x20(',
         'max',
@@ -597,7 +597,7 @@ function _0x5d8a() {
         '<div\x20class=\x22history-item\x22>No\x20calculations\x20yet</div>',
         'unshift',
         ',\x20focus\x20on\x20establishing\x20healthy\x20habits\x20that\x20will\x20last\x20a\x20lifetime',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         '2175770otzujN',
         '8stCEOG',
         '39544xaTYnw',
