--- a/tool-1/fake internet speed test 19/index.html
+++ b/tool-1/fake internet speed test 19/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Simulate internet speed results for testing and demos with our Fake Internet Speed Test. Works online and offline for UI demos, presentations, and development—for testing and demonstration purposes only, not for misrepresentation.">
 <meta name="keywords" content="fake internet speed test, speed test simulator, mock speed test, internet speed simulator, bandwidth simulator, demo speed test, fake speed generator, network speed mock, speed test for presentation">
-<meta name="author" content="OnlineGamesB">
-<title>Fake Internet Speed Test - Speed Test Simulator & Demo | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Fake Internet Speed Test - Speed Test Simulator & Demo | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -471,7 +471,7 @@
     <script>
        function _0x3feb() {
     const _0x2c7a2a = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'packetLossValue',
         'jitterResult',
         'serverLocationResult',
@@ -507,7 +507,7 @@
         'body',
         '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>',
         'jitter',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'className',
         'upload',
         'latencyResult',
