--- a/tool-1/image filter tool 29/index.html
+++ b/tool-1/image filter tool 29/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Apply stunning filters to your photos instantly with our free Image Filter Tool. Adjust brightness, contrast, saturation, and more — works online and offline.">
 <meta name="keywords" content="image filter tool, photo editor, online photo filter, image effects, brightness adjuster, contrast editor, saturation tool, offline photo editor, filter app, picture enhancer">
-<meta name="author" content="OnlineGamesB">
-<title>Image Filter Tool - Apply Photo Effects Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Image Filter Tool - Apply Photo Effects Online & Offline | OnlineGamesBD</title>
 <link rel="stylesheet" href="/menu/footer.css">
     <style>
         * {
@@ -381,8 +381,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
     
@@ -423,7 +423,7 @@ function _0x4c18() {
         'blackWhite',
         '1380798KdBrsq',
         'display',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'drawImage',
         '%)\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20saturate(',
         'style',
@@ -486,7 +486,7 @@ function _0x4c18() {
         'This\x20game\x20is\x20not\x20allowed\x20to\x20run\x20on\x20this\x20domain!',
         '42BHrhVP',
         '39696BpoWsW',
-        'www.onlinegamesb.xyz'
+        'www.onlinegamesbd.xyz'
     ];
     _0x4c18 = function () {
         return _0x5c60ae;
