--- a/tool-1/fake Facebook status generator 30/index.html
+++ b/tool-1/fake Facebook status generator 30/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free Facebook status generator tool - Create funny, inspirational or random Facebook status updates in seconds">
     <meta name="keywords" content="facebook status generator, status maker, funny status, random status, social media tool">
-    <title>Facebook Status Generator | OnlineGamesB</title>
+    <title>Facebook Status Generator | OnlineGamesBD</title>
     
     <!-- Open Graph / Facebook Meta Tags for Social Sharing -->
     <meta property="og:title" content="Facebook Status Generator">
@@ -316,8 +316,8 @@
             <p>This is not affiliated with Facebook. For entertainment purposes only.</p>
         </footer>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
         
     </div>
@@ -456,9 +456,9 @@ function shareToTwitter() {
 }
 generateBtn[_0x780ed7(0x206)](_0x780ed7(0x20f), generateStatus), randomizeBtn[_0x780ed7(0x206)](_0x780ed7(0x20f), randomizeAll), copyBtn[_0x780ed7(0x206)](_0x780ed7(0x20f), copyStatus), tweetBtn[_0x780ed7(0x206)](_0x780ed7(0x20f), shareToTwitter), generateStatus();
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0x780ed7(0x219),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x780ed7(0x1e8)][_0x780ed7(0x201)];
 if (!allowedDomains['includes'](currentHost)) {
     document[_0x780ed7(0x1e1)][_0x780ed7(0x1e4)] = _0x780ed7(0x1ff);
