--- a/tool-1/Upside down Text generator 34/index.html
+++ b/tool-1/Upside down Text generator 34/index.html
@@ -280,8 +280,8 @@
         </div>
         
       <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
     
@@ -594,7 +594,7 @@ function _0x18dd() {
         'text-white/70',
         'focus',
         'background',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'key',
         'value',
         'includes',
@@ -686,7 +686,7 @@ document[_0xc35e4a(0x1f0)]('DOMContentLoaded', () => {
 const allowedDomains = [
         _0xc35e4a(0x218),
         _0xc35e4a(0x22f),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0xc35e4a(0x242)][_0xc35e4a(0x245)];
 if (!allowedDomains[_0xc35e4a(0x21b)](currentHost)) {
     document[_0xc35e4a(0x206)][_0xc35e4a(0x1ed)] = _0xc35e4a(0x248);
