--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <!--Google a-->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8LHCZYP6EG"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQZ1NXXF4S"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8LHCZYP6EG');
+  gtag('config', 'G-QQZ1NXXF4S');
 </script>
 
 
