--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <link rel="icon" type="image/x-icon" href="/ico/favicon.ico" />
 <meta name="theme-color" content="#HEXCODE" />
 
+<!--Google ads-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1824145279222004"
+     crossorigin="anonymous"></script>
+
 <!--Google a-->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QQZ1NXXF4S"></script>
