--- a/index.html
+++ b/index.html
@@ -385,9 +385,10 @@
   document.getElementById("year").textContent = new Date().getFullYear();
 </script>
     
-  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
+  <link rel="preconnect" href="https://www.gstatic.com">
 
+<script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     
     <!-- Scripts -->
 <script src="preloader.js" defer></script>
