--- a/index.html
+++ b/index.html
@@ -507,18 +507,18 @@
     <div class="container">
       <h2 class="section-title">Useful Tools</h2>
       <div class="grid">
-        <a href="/tools/qr-code-generator" class="card">QR Code Generator</a>
-        <a href="/tools/random-food-picker" class="card">Random Food Picker</a>
-        <a href="/tools/text-repeater" class="card">Text Repeater</a>
-        <a href="/tools/password-generator" class="card">Password Generator</a>
-        <a href="/tools/color-picker" class="card">Color Picker</a>
-        <a href="/tools/image-compressor" class="card">Image Compressor</a>
-        <a href="/tools/timer" class="card">Countdown Timer</a>
-        <a href="/tools/lorem-ipsum" class="card">Lorem Ipsum Generator</a>
-        <a href="/tools/url-shortener" class="card">URL Shortener</a>
-        <a href="/tools/emoji-picker" class="card">Emoji Picker</a>
-        <a href="/tools/currency-converter" class="card">Currency Converter</a>
-        <a href="/tools/word-counter" class="card">Word Counter</a>
+        <a href="/tool-1/QR Code Generator 12/" class="card">QR Code Generator</a>
+        <a href="/tool-1/random food picker 49/" class="card">Random Food Picker</a>
+        <a href="/tool-1/Text Repeater 6/" class="card">Text Repeater</a>
+        <a href="/tool-1/Password Generator 5/" class="card">Password Generator</a>
+        <a href="/tool-1/color picker 15/" class="card">Color Picker</a>
+        <a href="/tool-1/Age Calculator 8/" class="card">Age Calculator</a>
+        <a href="/tool-1/fake internet speed test 19/" class="card">fake internet speed test</a>
+        <a href="/tool-1/love calculator 20/" class="card">love calculator</a>
+        <a href="/tool-1/Lucky Number  Mood Detector 48/" class="card">Lucky Number  Mood Detector</a>
+        <a href="/tool-1/EXIF data viewer 50/" class="card">EXIF data viewer</a>
+        <a href="/tool-1/Number to Word converter 7/" class="card">Number to Word converter</a>
+        <a href="/tool-1/word counter 2/" class="card">Word Counter</a>
       </div>
     </div>
   </section>
