--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     <div class="container">
       <h2 class="section-title">Popular Games</h2>
       <div class="grid">
-       <a href="/offline-games/100-question-iq-test/" class="card">100 Question IQ Test</a>
+       <a href="/all-game" class="card">All Games</a>
 <a href="/offline-games/2048/" class="card">2048</a>
 <a href="/offline-games/balloon-pop/" class="card">Balloon Pop</a>
 <a href="/offline-games/color-match/" class="card">Color Match</a>
@@ -509,7 +509,7 @@
     <div class="container">
       <h2 class="section-title">Useful Tools</h2>
       <div class="grid">
-        <a href="/tool-1/QR Code Generator 12/" class="card">QR Code Generator</a>
+        <a href="/tools" class="card">All Tools</a>
         <a href="/tool-1/random food picker 49/" class="card">Random Food Picker</a>
         <a href="/tool-1/Text Repeater 6/" class="card">Text Repeater</a>
         <a href="/tool-1/Password Generator 5/" class="card">Password Generator</a>
